<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="set_node">Set Node</string>
    <string name="michlala_map">Map of Michlala</string>
    <string name="drawCircle">drawCircle</string>
    <string name="go_to_all_networks">All Networks</string>
    <string name="about_app">About App</string>
    <string name="load_fingerprints">Load</string>
    <string name="hi_guys">Hi Guys</string>
    <string name="add_points">Add Points</string>
    <string name="reload_networks">Reload Networks</string>
    <string name="reload_wifi">Reload WiFi</string>
    <string name="this_is_an_image_doofus_">This is an image doofus!</string>
    <string name="welcome_text">Welcome to Wifi Navigation!</string>
    <string name="set_wifi_aps">Set WiFi AP\'s on Map</string>
    <string name="make_route">Create Route on Map</string>
    <string name="navigate">Navigate</string>
    <string name="upload_map_image">Upload Map Image</string>
    <string name="refresh_networks">Refresh Network Data</string>
    <string name="show_all_wifi_networks">Show All WiFi Networks</string>
    <string name="the_text_clock">TEXT CLOCK</string>
    <string name="clock">Clock</string>
    <string name="normalized_networks">Normalized Data</string>
    <string name="networks_raw">Raw Network Level Data</string>
    <string name="all_available_screens">All Available Networks</string>
    <string name="rescan">Rescan Networks</string>
    <string name="raw_network_title">Raw Data</string>
    <string name="normalize">Normalize Levels</string>
    <string name="normalized_title">Normalized Network Levels</string>
    <string name="enter_network_names">Please enter networks name you would like to monitor.</string>
    <string name="submit_networks">Submit</string>
    <string name="show_fingerprint_db">Show Database</string>
    <string name="add_nodes_intro">Touch the image to create the graph.</string>
    <string name="set_nodes_on_map">Set Nodes On Map</string>
    <string name="new_db_file">New DB</string>
    <string name="show_position">Show Position on Map</string>  
    <string name="nav_screen">Navigate!</string>  
    <string name="view_graph">View Graph</string>  
    <string name="show">Show</string>  
    <string name="graph_desc">Graph Image Description</string>  
    <string name="load_nodes">Load Nodes</string>  
    <string name="show_nodes">Show Nodes</string>  
    <string name="stop_load_state">Stop Load</string>
    <string name="position">Position</string>
    <string name="nodes">Nodes</string>
    <string name="hide_nodes">Hide Nodes</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="create">Create</string>
    <string name="file_name">Filename</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="fdrowtext">Row text</string>
    <string name="location">Location</string> 
    <string name="cant_read_folder">Can\'t read folder!</string>
    <string name="choose_file">Choose File</string>
    <string name="choose_map_image">Choose Map File</string>
    <string name="change_floor_file">Change map</string>
    <string name="add_new">Add New</string>
    <string name="del_first">Delete First</string>
    <string name="our_info">Created by Yosef Tavin \nand Nethanel Kirenberg as a \nFinal Project for a BSc. in Computer Science.\nCopyright July 2013</string>
    <string name="about">About</string>
    <string name="wifi_text_view">WiFi Text</string>
    <string name="raw_data">Raw Data</string>
    <string name="action_db">Database</string>
    <string name="checkbox_text">Use Map File</string>
    <string name="current_map">Current map file name is:</string>
    <string name="view_db">View</string>
    <string name="resetdb">Reset</string>
    <string name="delete_db">Delete</string>
    <string name="db_ops">Database Operations</string>
    <string name="welcome_text_2">Welcome.\nChoose desired option.</string>
    <string name="delete_node">Delete Node</string>
    <string name="db_version_text">Current Database Version</string>
    <string name="routered_monitered_text">Routers monitered by App</string>
    <string name="save">Save</string>
    <string name="nodes_count">Nodes count</string>
    <string name="position_on_map">Position on map</string>
</resources>
