<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nodes_count"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/delete"
        android:text="@string/hello_world" >

    </ListView>

    <Button
        android:id="@+id/delete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/add"
        android:onClick="onClick"
        android:text="@string/delete_node" />

    <Button
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:text="@string/add_new" />

    <TextView
        android:id="@+id/nodes_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/nodes_count" />

</RelativeLayout>
