<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:padding="@dimen/fifty" >

    <Button
        android:id="@+id/db_op_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_db" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/db_op_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetdb" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/db_op_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_db" 
        android:onClick="onClick"/>

</LinearLayout>
