<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/networks_rel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c5e9b4"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:ignore="LabelFor" >

    <TextView
        android:id="@+id/raw_networks_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/scroll_all_networks"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/rescan_button"
        android:gravity="center_horizontal"
        android:text="@string/raw_data"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scroll_all_networks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rescan_button" >

        <TextView
            android:id="@+id/raw_network_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raw_network_title"
            android:textSize="20sp" />
    </ScrollView>

    <Button
        android:id="@+id/rescan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:text="@string/rescan" />

    <TextView
        android:id="@+id/wifiTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/wifi_text_view" />

</RelativeLayout>