<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/michlala_map_2"
        android:layout_width="wrap_content"
        android:layout_height="816dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/about_us"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/this_is_an_image_doofus_"
        android:longClickable="false"
        android:src="@drawable/mm2" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="470dp"
        android:layout_height="76dp"
        android:layout_alignBottom="@+id/button_to_change_file"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_to_change_file"
        android:text="@string/add_nodes_intro"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/twenty" />

    <Button
        android:id="@+id/button_to_change_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/change_floor_file"
        android:textColor="@android:color/holo_blue_light" />

</RelativeLayout>